--- a/front-end/src/styles/Nav.scss
+++ b/front-end/src/styles/Nav.scss
@@ -14,18 +14,20 @@
     }
   }
   &-item {
+    color: $body;
+    font-weight: bold;
     text-decoration: none;
+    font-size: 1rem;
     margin-right: 0.5rem;
     &:hover {
       text-decoration: underline;
+      cursor: pointer;
     }
     &-icon {
       margin-right: 0.5rem;
     }
-  }
-
-  & a {
-    font-weight: bold;
-    color: $body;
+    & > .sign-in-icon {
+      padding-right: 0.5rem;
+    }
   }
 }
