--- a/front-end/src/styles/index.scss
+++ b/front-end/src/styles/index.scss
@@ -18,6 +18,11 @@ body {
   min-height: 100vh;
 }
 
+button {
+  background: transparent;
+  border: none;
+}
+
 .sr-only {
   border: 0 !important;
   clip: rect(1px, 1px, 1px, 1px) !important; /* 1 */
@@ -42,4 +47,17 @@ body {
 
 .bg-dark {
   background-color: $bg-dark;
+}
+
+.header {
+  color: #fff;
+  margin-bottom: 2rem;
+}
+
+.edit-button {
+  border-color: #00bc77;
+  background-color: #00bc77;
+  color: #fff;
+  font-weight: bold;
+  padding: 10px;
 }
